Version 0.7.0
-------------
* Renamed `DocTest.globs` to `DocTest.global_namespace`

Version 0.6.2
-------------
* Fixed bug in `static_analysis.is_balanced_statement` and
  `static_analysis.extract_comments` having to do with empty lines
* Fixed odd corner case where import_module_from_path seemed to modify `sys.path` in a specific environment
* Fixed python2 future issues using the print name in doctests.
* Added option to print test times in the runner.


Version 0.6.1
-------------
* Fixed python2 unicode error in collection phase


Version 0.6.0
-------------
* Better error messages when you forget a raw string on a google block with
  newlines in the docstr.
* Tests for malformed google docstr case.
* Added --nocolor command line arg
* Added parserkw arg
* Python 3.7 support


Version 0.5.8
-------------
* Fixed install issues (/introduced hack FIXME later)
* Fixed issue with raw string lineno parsing

Version 0.5.0
-------------
* Generally Improved doctest error reporting 
    * Includes better coloring for quick visual inspection
    * Line numbers are now reported in a more intuitive way
    * We finally removed the exec DoctestExample.run from the traceback!
    
* (we report line numbers of errors in a more intuitive way).
* Fixed GH#20 where doclineno_end was incorrectly parsed
* Fixed issue where google style block lineno was incorrect
* Added config option for lineno offsets. (corresponding arguments added to
  native and pytest runners)
* Add support for Python 3.7


Version 0.4.1
-------------
* Fixed bug with reporting ellapsed time in native runner


Version 0.4.0
-------------
* Added auto parsing style. This first tries to use Google, but falls back on
  freeform if no google-style doctests are found.
* Errors are no longer printed twice if only a single test is being run.
* All parsers now default to the new "auto" style.
* Added command "dump" to native runner that reformats enabled doctests so they
  can be run as unit tests.